--- a/app/views/comments/_comment_modal.html.erb
+++ b/app/views/comments/_comment_modal.html.erb
@@ -1,5 +1,5 @@
-<div id="comment-modal-<%= @post_id %>" class="list-comment-modal modal" role="dialog">
-  <div class="modal-dialog">
+<div id="comment-modal-<%= @post_id %>" class="list-comment-modal modal fade" role="dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
 
       <div class="modal-header">
