--- a/app/views/reactions/_reaction_modal.html.erb
+++ b/app/views/reactions/_reaction_modal.html.erb
@@ -1,5 +1,5 @@
-<div id="reaction-modal-<%= @post_id %>" class="list-like-modal modal" role="dialog">
-  <div class="modal-dialog">
+<div id="reaction-modal-<%= @post_id %>" class="list-like-modal modal fade" role="dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title"><%= t("label.likes") %></h5>
