--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -178,6 +178,7 @@ aside {
 .list-like-modal{
   .modal-dialog{
     overflow-y: initial !important
+    
   }
   .modal-body{
     height: 400px;
@@ -417,4 +418,16 @@ text-align: left;
 }
 .fa-star{
   color: #ffa64d;
+}
+.border_box{
+  border-radius: 5px;
+}
+
+.modal-content {
+  height: 80%;
+}
+
+.modal-picture{
+  margin: auto;
+  width: 400px;
 }
