--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container">
+  <div class="container mb-5">
     <div class="row pt-5">
       <div class="col-12 text-md-center text-left">
         <p>
