--- a/app/views/shared/header_partial/_search.html.erb
+++ b/app/views/shared/header_partial/_search.html.erb
@@ -1,5 +1,5 @@
 <div class="site-blocks-cover overlay" style="background-image: url(<%= asset_url("hero_1.jpg")%>);" data-stellar-background-ratio="0.5">
-  <div class="container">
+  <div class="container pt-3">
     <div class="row align-items-center justify-content-center text-center">
       <div class="col-md-10">
         <div class="row justify-content-center mb-4">
