--- a/app/views/users/newfeed.html.erb
+++ b/app/views/users/newfeed.html.erb
@@ -26,6 +26,8 @@
             <%= render @feed_items %>
           </ol>
           <%= paginate @feed_items, theme: "twitter-bootstrap-4" %>
+        <% else %>
+          <p class="text-primary text_center"><%= t ("You dont have any post!") %></p>
         <% end %>
       </div>
 
