--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
 
       <div class="col-md-8">
         <% if current_user == @user %>
-          <button id= "up-post-btn" type="button" class="btn btn-primary">Up new post</button>
+          <button id= "up-post-btn" type="button" class="btn btn-primary border_box mb-2"><%= t ("Up new post") %></button>
           <section id = "up-post-form"></section>
         <% end %>
         <% if @user.posts.any? %>
@@ -30,6 +30,8 @@
             <%= render @posts %>
           </ol>
           <%= paginate @posts, theme: "twitter-bootstrap-4" %>
+        <% else %>
+          <p class="text-primary text_center"><%= t ("You dont have any post!") %></p>
         <% end %>
       </div>
 
